Fix spacing errors in code

--- a/css/main.css
+++ b/css/main.css
@@ -31,22 +31,20 @@ img:nth-child(4) {
 
   img {
     display: inline-block;
-    width: 50%;
-    float: left;
+    width: 49%;
   }
 
   img:nth-child(2),
   img:nth-child(4) {
     display: inline-block;
-    width: 50%;
-    float: left;
+    width: 49%;
   }
 }
 
 @media only screen and (min-width: 38em) {
 
   img {
-    width: 33.3333%;
+    width: 32%;
   }
 
   img:first-child {
@@ -56,24 +54,27 @@ img:nth-child(4) {
   img:nth-child(2),
   img:nth-child(3),
   img:nth-child(4) {
-    width: 33.3333%;
+    width: 32%;
   }
 }
 
 @media only screen and (min-width: 60em) {
 
   img {
-    width: 25%;
+    width: 24%;
   }
 
   img:first-child {
     display: inline-block;
-    width: 25%;
+    width: 24%;
   }
 
   img:nth-child(2),
   img:nth-child(3),
   img:nth-child(4) {
-    width: 25%;
+    width: 24%;
   }
 }
+
+
+/**how to make the space appear**/
